--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/jaehokim12/NodebirdsBackend/issues"
   },
-  "homepage": "https://github.com/jaehokim12/NodebirdsBackend#readme"
+  "homepage": "https://github.com/jaehokim12/NodebirdsBackend#readme",
+  "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^14.2.0",
+    "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
+    "nunjucks": "^3.2.3",
+    "sequelize": "^6.13.0",
+    "sequelize-cli": "^6.4.1",
+    "typescript": "3.3"
+  }
 }
